fix: sticky header on mobile

--- a/src/app/components/events/events-list/events-list-cards/events-list-cards.component.scss
+++ b/src/app/components/events/events-list/events-list-cards/events-list-cards.component.scss
@@ -87,15 +87,16 @@
         }
     }
 
+    &.touchesTop:not(.first) {
+        border-top: none;
+    }
+
     @include media-breakpoint-up(md) {
         h2 {
             font-size: 1.5rem;
             margin: 1rem 2rem;
         }
 
-        &.touchesTop:not(.first) {
-            border-top: none;
-        }
         &.isOnTop {
             border-top: none;
         }
@@ -114,8 +115,9 @@
 }
 
 ul {
-    padding: 0 1rem;
     list-style: none;
+    margin-bottom: 0;
+    padding: 0 1rem 1rem;;
 
     @include media-breakpoint-up(md) {
         padding: 2rem;
